--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.9.14",
+    "gh-pages": "2.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "http://25DimoN25.github.io/emoji_text_generator",
   "browserslist": {
     "production": [
       ">0.2%",
