--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.9.14",
+    "@material-ui/lab": "4.0.0-alpha.53",
     "gh-pages": "2.2.0",
     "ramda": "0.27.0",
     "react": "16.12.0",
